[package]
name = "hut-ws-proto"
version = "0.1.1"
edition = "2024"
build = "build.rs"
exclude = [
    "node_modules/",
    "package.json",
    "pnpm-lock.yaml",
    "generated/"
]

[dependencies]
protobuf = { version = "3.7.2", features = ["bytes", "with-bytes"] }

[build-dependencies]
protobuf-codegen = "3.7.2"
